fix(styles) remove important for text truncate

--- a/src/styles/alain/app/utils/text.less
+++ b/src/styles/alain/app/utils/text.less
@@ -12,7 +12,7 @@
 // wrapping
 .text-nowrap        { white-space: nowrap !important; }
 .text-wrap          { white-space: pre-wrap !important; }
-.text-truncate      { .text-truncate("!important"); }
+.text-truncate      { .text-truncate(); }
 
 // Weight and italics
 
